fix: the gap under the compare button on the compare page on the online visitors tab

--- a/frontend/express/public/stylesheets/vue/clyvue.scss
+++ b/frontend/express/public/stylesheets/vue/clyvue.scss
@@ -1419,6 +1419,10 @@
         }
     }
 
+    .cly-vue-section:not(:last-child) {
+        margin-bottom: 0px;
+    }
+
     .cly-vue-popover{
         cursor: pointer;
         z-index: 2000;
